# DSA_2024

extra-02/: CMakeLists.txt  main.c
lab-01/: CMakeLists.txt  main.c
lab-01/Sources/: flowerGarden.c  flowerGarden.h
lab-02/: CMakeLists.txt  main.c
lab-02/Headers/: constants.h  student.h
lab-02/Sources/: student.c
lab-03/: CMakeLists.txt  main.c
lab-03/Headers/: functions.h
lab-03/Sources/: functions.c
lab-04/: CMakeLists.txt  main.c
lab-04/Headers/: array.h  constants.h
lab-04/Sources/: array.c
lab-05/: CMakeLists.txt  main.c
lab-05/Headers/: circular_queue.h  constants.h  regular_queue.h  stack.h
lab-05/Sources/: circular_queue.c  regular_queue.c  stack.c
lab-07/: CMakeLists.txt  main.c
lab-07/header/: folder.h
lab-07/source/: folder.c
lab-08/: CMakeLists.txt  main.c
lab-08/Headers/: functions.h  linked_list.h
lab-08/Sources/: functions.c  linked_list.c
lab-09/: CMakeLists.txt  main.c
lab-09/Headers/: functions.h
lab-09/Sources/: functions.c
lab-10/: CMakeLists.txt  main.c
lab-10/Headers/: linked_list.h
lab-10/Sources/: linked_list.c
lab-12/: CMakeLists.txt  main.c
lab-12/Functions/: bst.c  bst.h
